test/library/standard/Sort/errors/errors-compare.noKeyPart.good
errors-compare.chpl:9: In function 'main':
errors-compare.chpl:17: error: The comparator noKeyPart implements the keyPartComparator interface, but the keyPart method is not implemented
